# ESBAKOHM-C

./: .gitignore  .gitmodules  CMakeLists.txt  camera.h  filesystem.h  main.cpp  mesh.h  model.h  shader.h
resources/objects/grass/: grass.mtl
resources/objects/table/: table with chairs.mtl
resources/shaders/: shader.fs
